--- a/docs/D1/D1.org
+++ b/docs/D1/D1.org
@@ -79,8 +79,7 @@ Members of this project are as follows:
 |     10 | Capacitors        | $0.466   | 16v 1000UF Electrolitic SMD                        |                                                          4.66 |
 |      1 | Raspberry pi      | $29.99   | Raspberry Pi 3 Model A + 2018 model                |                                                         29.99 |
 |--------+-------------------+----------+----------------------------------------------------+---------------------------------------------------------------|
-|        |                   |          | Total:                                             | vsum [6.33, 7.96, 4.99, 0.99, 15.05, 7.51, 0.79, 4.66, 29.99] |
-|        |                   |          |                                                    |                                                               |
+|        |                   |          | Total:                                             |                                                               |
 |--------+-------------------+----------+----------------------------------------------------+---------------------------------------------------------------|
 #+TBLFM: @11$5=vsum@2..@-1
 
