--- a/docs/D1/D1.org
+++ b/docs/D1/D1.org
@@ -79,8 +79,9 @@ Members of this project are as follows:
 |     10 | Capacitors        |  0.466   | 16v 1000UF Electrolitic SMD                        |                                                          4.66 |
 |      1 | Raspberry pi      |  29.99   | Raspberry Pi 3 Model A + 2018 model                |                                                         29.99 |
 |      1 | 9-axis MPU        |  4.60    | MPU9250 (Gyro + Accelerometer + Compass)           |                                                          4.60 |
+|      1 | ADC               |  1.69    | INA219  DC current and voltage sensor              |                                                          1.69 |
 |--------+-------------------+----------+----------------------------------------------------+---------------------------------------------------------------|
-|        |                   |          | Total:                                             |                                                         82.87 |
+|        |                   |          | Total:                                             |                                                         84.56 |
 |--------+-------------------+----------+----------------------------------------------------+---------------------------------------------------------------|
 #+TBLFM: @11$5=vsum@2..@-1
 
