--- a/docs/D1/D1.org
+++ b/docs/D1/D1.org
@@ -112,7 +112,7 @@ All components are purchased from various EBay stores, with shipping times betwe
 |      1 | Speaker           |         0.99 | 8 ohm speaker                                            |     0.99 |
 |      1 | Lipo              |        15.05 | Lipo battery pack                                        |    15.05 |
 |      1 | Microphone        |         7.51 | I2S MEMS Microphone SPH0645LM4H                          |     7.51 |
-|      1 | Voltage Regulator |         0.79 | 3-24V to 12V 2A Adjustable Boost Step-Up Converter       |     0.79 |
+|      1 | Voltage Regulator |         0.79 | B628 3-24V to 12V 2A Adjustable Boost Step-Up Converter  |     0.79 |
 |     10 | Capacitors        |        0.466 | 16v 1000UF Electrolitic SMD                              |     4.66 |
 |      1 | Raspberry pi      |        29.99 | Raspberry Pi 3 Model A+ 2018 model                       |    29.99 |
 |      1 | 9-axis MPU        |         4.60 | MPU9250 (Gyro, Accelerometer, Compass)                   |     4.60 |
